<resources>
    <!-- Specialist Page -->
    <string name="specialist_from_company">Специалист компании «%s»</string>
    <string name="specialist_from_company_hint">Специалист компании</string>
    <string name="sales_manager">Менеджер по продажам</string>
    <string name="phone_format_hint">+7 (777) 777 77 77</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="building_count_title">Предложения по продаже объектов</string>
    <string name="apartments_with_count">Квартиры: %d</string>
    <string name="apartments_with_count_hint">Квартиры:</string>
    <string name="house_with_count">Дома: %d</string>
    <string name="house_with_count_hint">Дома:</string>
    <string name="commerce_with_count">Помещения: %d</string>
    <string name="commerce_with_count_hint">Помещения:</string>
    <string name="place_of_work">Место работы: %s</string>
    <string name="place_of_work_hint">Место работы:</string>
    <string name="about_specialist">Про специалиста</string>
    <string name="name_surname_hint">Имя Фамилия</string>

    <!-- Favorites Page -->
        <string name="favorite_page_list_title">Список понравившихся вам домов</string>
    <string name="favorite_list_empty_text">Место для избранных объектов</string>
    <string name="favorite_list_empty_subtext">Нажмите на ♡ возле объявлений, чтобы не потерять их</string>

    <string name="app_name">Resod</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sale">Sale</string>
    <string name="menu_rent">Rent</string>
    <string name="menu_companies">Companies</string>
    <string name="menu_specialists">Specialists</string>
    <string name="menu_login">Login</string>

    <string name="button">Button</string>

    <string name="login_text">Войти в аккаунт</string>

    <!-- Registration -->
    <string name="registration_text">Создай свой аккаунт</string>

    <!-- Building String -->
    <string name="building_cost">%s, $</string>
    <string name="broadcast">Broadcast</string>

    <!-- filter values -->
    <string-array name="filter_type_buy_values">
        <item>Buy</item>
        <item>Rent</item>
    </string-array>

    <string-array name="filter_range_slider_price">
        <item>0</item>
        <item>500000</item>
    </string-array>

    <!-- Facebook -->
    <string name="facebook_app_id">3338459279723763</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">abfa57f7368b5e469a1ce7f01756f4de</string>


    <string name="server_client_id">724422601071-ljnh3auupuipuqdkshfrs691h3ic4apb.apps.googleusercontent.com</string>
</resources>