<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/ic_seller"
            android:title="@string/menu_sale" />
        <item
            android:id="@+id/nav_rent"
            android:icon="@drawable/ic_rent"
            android:title="@string/menu_rent" />
        <item
            android:id="@+id/nav_companies"
            android:icon="@drawable/ic_company"
            android:title="@string/menu_companies" />
        <item
            android:id="@+id/nav_specialists"
            android:icon="@drawable/ic_seller_svgrepo_com"
            android:title="@string/menu_specialists" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login"/>
    </group>
</menu>