<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="kz.reself.resod.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sale"
        android:name="kz.reself.resod.ui.sale.SaleFragment"
        android:label="@string/menu_sale"
        tools:layout="@layout/fragment_sale" />

    <fragment
        android:id="@+id/nav_rent"
        android:name="kz.reself.resod.ui.rent.RentFragment"
        android:label="@string/menu_rent"
        tools:layout="@layout/fragment_rent" />

    <fragment
        android:id="@+id/nav_companies"
        android:name="kz.reself.resod.ui.companies.CompaniesFragment"
        android:label="@string/menu_companies"
        tools:layout="@layout/fragment_companies" />

    <fragment
        android:id="@+id/nav_specialists"
        android:name="kz.reself.resod.ui.specialists.SpecialistsFragment"
        android:label="@string/menu_specialists"
        tools:layout="@layout/fragment_specialists" />
</navigation>