<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorites.FavoritesFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_favorites__listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_page_list_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/favorite_list_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_list_empty_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/favorite_list_empty_subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_list_empty_subtext"
        app:layout_constraintTop_toBottomOf="@id/favorite_list_empty_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_favorites__rvBuildings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_favorites__listTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>